Add LoadCoursesCommand