@@ -1,7 +1,12 @@
 package com.github.hokkaydo.eplbot.module.graderetrieve;
 
 import com.github.hokkaydo.eplbot.command.Command;
+import com.github.hokkaydo.eplbot.database.DatabaseManager;
 import com.github.hokkaydo.eplbot.module.Module;
+import com.github.hokkaydo.eplbot.module.graderetrieve.repository.CourseGroupRepository;
+import com.github.hokkaydo.eplbot.module.graderetrieve.repository.CourseGroupRepositorySQLite;
+import com.github.hokkaydo.eplbot.module.graderetrieve.repository.CourseRepository;
+import com.github.hokkaydo.eplbot.module.graderetrieve.repository.CourseRepositorySQLite;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
 import org.jetbrains.annotations.NotNull;
 
@@ -11,11 +16,15 @@ import java.util.List;
 public class ExamsRetrieveModule extends Module {
 
     private final SetupRetrieveChannelCommand setupRetrieveChannelCommand;
+    private final LoadCoursesCommand loadCourseCommand;
     private final ExamsRetrieveListener examsRetrieveListener;
     public ExamsRetrieveModule(@NotNull Long guildId) {
         super(guildId);
-        this.examsRetrieveListener = new ExamsRetrieveListener(guildId);
+        CourseRepository courseRepository = new CourseRepositorySQLite(DatabaseManager.getDataSource());
+        CourseGroupRepository repository = new CourseGroupRepositorySQLite(DatabaseManager.getDataSource(), courseRepository);
+        this.examsRetrieveListener = new ExamsRetrieveListener(guildId, repository);
         this.setupRetrieveChannelCommand = new SetupRetrieveChannelCommand(guildId, examsRetrieveListener);
+        this.loadCourseCommand = new LoadCoursesCommand(repository);
     }
 
     @Override
@@ -25,7 +34,7 @@ public class ExamsRetrieveModule extends Module {
 
     @Override
     public List<Command> getCommands() {
-        return Collections.singletonList(setupRetrieveChannelCommand);
+        return List.of(setupRetrieveChannelCommand, loadCourseCommand);
     }
 
     @Override
